--- a/templates/home.html
+++ b/templates/home.html
@@ -1,31 +1,33 @@
 {% extends 'base.html' %}
 {% load bootstrap5 %}
 {% load static %}
-{% block title %}Home{% endblock %}
+{% block title %}
+    Home
+{% endblock %}
 
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            <h1>Produtos Artesanais</h1>
-            <p>Seja bem-vindo ao Ecommerce - Vasinhos de Cerâmica</p>
-            <ul class="list-group">
-                {% for produto in produtos %}
-                <li class="list-group-item d-flex align-items-center">
-                    <div>
-                        {{ produto.nome_produto }}
-                    </div>
-                    <div class="ms-auto">
-                        <img src="{{ produto.imagem.url }}" alt="" style="max-width: 200px;">
-                    </div>
-                </li>
-                {% endfor %}
-            </ul>
+    <div class="row justify-content-center">
+        <div class="col-md-7">
+            <!-- Conteúdo que você quer adicionar na coluna 1 -->
         </div>
-        <div class="col-md-4">
-            <h2>Adicionar Produto</h2>
-            <a href="{% url 'projeto:pedido_order' %}" class="btn btn-primary">Fazer Pedido</a>
+        <div class="col-md-6">
+            <h1 class="card-title text-muted display-4 me-3" style="font-family: 'Lobster';">Produtos Artesanais</h1>
+            <p class="lead text-center mb-6 text-muted">Cada peça é cuidadosamente trabalhada para transmitir beleza e emoção.</p>
+            <div class="d-flex flex-wrap justify-content-center"> <!-- Centraliza o conteúdo horizontalmente -->
+                {% for produto in produtos %}
+                <div class="col-md-6 mb-3">
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex align-items-center">
+                            <span>{{ produto.nome_produto }}</span>
+                            <img src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}" class="img-fluid rounded ms-3" style="max-width: 200px;">
+                        </li>
+                    </ul>
+                </div>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </div>
+
 {% endblock %}
