--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,9 +1,37 @@
 {% extends 'base.html' %}
-<title>{% block title%}Sobre{% endblock%}</title>
+{% load static %}
+{% block title %}
+    Sobre
+{% endblock %}
 {% block content %}
 
-<div class="container mt-4">
-    <h1>SOBRE</h1>
-
+<div class="row justify-content-center border border-top border-bottom">
+    <div class="col-md-8 mt-4 mb-4">
+        <div class="card">
+            <div class="card-body mb-4">
+                <div class="d-flex justify-content-center align-items-center mb-5">
+                    <div class="text-center mb-5">
+                        <h1 class="card-title text-muted display-4 me-3" style="font-family: 'Lobster';">Sobre</h1>
+                        <p class="lead text-center mb-5 text-muted">Apaixonada por pintura e artes, nossa equipe se dedica a criar vasos de cerâmica únicos, onde cada pincelada conta uma história. Cada peça é cuidadosamente trabalhada para transmitir beleza e emoção.</p>
+                    </div>
+                    
+                    <div class="text-center mb-5">
+                        <h1 class="card-title text-muted display-4 me-3" style="font-family: 'Lobster';">Produtos</h1>
+                        <p class="lead text-muted">Feito com carinho e artesanalmente, nossos vasos são verdadeiras obras de arte que trazem um toque especial a qualquer ambiente. Utilizando técnicas tradicionais de pintura, cada peça é única e carrega consigo o amor e a paixão pela arte.</p>
+                    </div>
+                    
+                    
+                    <div class="text-center mb-5">
+                        <h1 class="card-title text-muted display-4" style="font-family: 'Lobster';">Filosofia</h1>
+                        <p class="lead mb-5 text-muted text-justify">Nosso compromisso vai além de oferecer produtos. Queremos educar e inspirar nossos clientes a fazerem escolhas mais conscientes, contribuindo para um mundo mais sustentável e compassivo. Valorizamos a transparência, a ética e o respeito por todas as formas de vida.</p>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </div>
 </div>
+
 {% endblock %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-0Il68U4k7gEw9srIkuRg8Ws2Y0e4ph8v+Nk9+1aXlOUq8g7yAztefyR7xOuqOOtV" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-+o8lUDEjwJpZyE2+W4tFqJQbeqalCV7kCOy5y7vOa+Pk5RfHQq1By0+8l7W/nhXo" crossorigin="anonymous"></script>
